Added new service

--- a/.env.sample
+++ b/.env.sample
@@ -18,6 +18,10 @@ DB_USER="DB_USER" #Eg: root
 DB_PASSWORD="DB_PASSWORD" 
 DB_PORT=3306
 
+#Backup API
+BACKUP_API_ENDPOINT="http://127.0.0.1:8000/api/backups/upload/"
+BACKUP_API_KEY="API_KEY"
+
 # Email Settings (Gmail)
 EMAIL_HOST_USER="your_email"
 EMAIL_HOST_PASSWORD="email_app_password" #Not the usual password but a special app password
