--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ./mediafiles:/app/mediafiles
-      - ./staticfiles:/app/staticfiles
+      - media_volume:/app/mediafiles
+      - static_volume:/app/staticfiles
     depends_on:
       - db
 
@@ -14,8 +14,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./staticfiles:/app/staticfiles:ro
-      - ./mediafiles:/app/mediafiles:ro
+      - static_volume:/app/staticfiles:ro
+      - media_volume:/app/mediafiles:ro
     depends_on:
       - django
 
@@ -55,3 +55,5 @@ services:
 
 volumes:
   db_data:
+  static_volume:
+  media_volume:
